--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 main {
-  height: 90vh;
+  height: 89.5vh;
 }
 
 header {
@@ -190,4 +190,16 @@ main {
   width: 50px;
   height: 50px;
   font-size: 21px;
+}
+
+#message {
+  font-size: 24px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.hidden {
+  display: none;
 }
